# swin-unetr

./: .pre-commit-config.yaml  README.md  cascadedunet_train.ipynb  requirements.txt  setup.cfg  swinunetr_finetune.ipynb  unet_train.ipynb
.github/workflows/: deploy_and_test.yml  lint.yml
datalists/: vein_artery_all.json
src/swin_unetr/: cascaded_unet.py  charm_labels.json  charm_labels.py  evaluate.py  make_datalist.py  make_dataset.py  make_vessels_dataset.py  test.py
tests/: test_cascaded_unet.py
