[metadata]
name = swin-unetr
version = 0.5.0
requires-python = ">=3.7"

[options]
package_dir=
    =src
packages=find:
install_requires =
    einops
    ipympl
    ipython
    ipywidgets
    itk
    nibabel
    matplotlib
    monai
    scipy
    SimpleITK
    sitk-cli
    tqdm
    typer

[options.packages.find]
where=src

[options.extras_require]
dev =
    build
    mypy
    pytest
    twine

[options.entry_points]
console_scripts =
    predict = swin_unetr.test:main
    make-datalist = swin_unetr.make_datalist:main

[mypy]
disallow_untyped_defs = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true
show_column_numbers = true
show_error_codes = true

[mypy-setuptools,sitk_cli,matplotlib.*,IPython.*,ipywidgets,scipy,numpy,monai.*,torch,tqdm]
ignore_missing_imports = true
